# sweetspot

./: README.md  pyproject.toml
examples/: demo.py
src/sweetspot/: __init__.py  base.py  compose.py  fit.py  functions.py  plotting.py
src/sweetspot.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_sweetspot.py
