[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"
[project]
name="sweetspot"
version="0.1.0"
description="Desirability optimisation toolkit"
readme="README.md"
requires-python=">=3.9"
dependencies=["numpy>=1.21","matplotlib>=3.5"]
[tool.setuptools]
package-dir={""="src"}
[tool.setuptools.packages.find]
where=["src"]
